# otterpack

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  windows-build.yml
otterpack-cli/: Cargo.toml
otterpack-exe/: Cargo.toml
otterpack-exe/src/: app.rs  lib.rs  main.rs  self_extract.rs
src/: app.rs  lib.rs  main.rs  process.rs  self_extract.rs
